--- a/projects/IHM/app/anchoredParts/body.html
+++ b/projects/IHM/app/anchoredParts/body.html
@@ -12,7 +12,7 @@
                     </div>
                     </md-content>
                 </md-tab>
-                <md-tab class="menulinks" label="Etablissement">
+                <md-tab class="menulinks" label="Établissement">
                     <md-content>
                         <div ng-include="schoolMenu"></div>
                         <div class="reduceOrExpand" expanded="false">
@@ -22,7 +22,7 @@
                         </div>
                     </md-content>
                 </md-tab>
-                <md-tab class="menulinks" label="Programme">
+                <md-tab class="menulinks" label="Élèves et enseignements">
                     <md-content>
                         <div ng-include="programmeMenu"></div>
                         <div class="reduceOrExpand" expanded="false">
@@ -32,7 +32,7 @@
                         </div>
                     </md-content>
                 </md-tab>
-                <md-tab class="menulinks" label="Prof - Cours">
+                <md-tab class="menulinks" label="Professeurs">
                     <md-content>
                         <div ng-include="teacherMenu"></div>
                         <div class="reduceOrExpand" expanded="false">
