--- a/projects/IHM/app/programmeMenu/programmeMenu.html
+++ b/projects/IHM/app/programmeMenu/programmeMenu.html
@@ -2,15 +2,13 @@
   <div style="display:none" ng-model="page"></div>
   <div class="tab" expanded="false">
     <button id="programmeGradeClasses" class="tablinks"
-            ng-click="openTab('programmeMenu/gradeClassesTab/gradeClassesTab.html', 'programmeGradeClasses')">
-      Niveaux - Classes
+            ng-click="openTab('programmeMenu/gradeClassesTab/gradeClassesTab.html', 'programmeGradeClasses')">Élèves
     </button>
     <button id="programmeSubjects" class="tablinks" ng-click="openTab('programmeMenu/subjectsTab/subjectsTab.html', 'programmeSubjects')">
       Matières
     </button>
     <button id="programmeProgramme" class="tablinks"
-            ng-click="openTab('programmeMenu/programmeTab/programmeTab.html', 'programmeProgramme')">Répartition horaire
-      par niveau
+            ng-click="openTab('programmeMenu/programmeTab/programmeTab.html', 'programmeProgramme')">Programmes scolaires
     </button>
   </div>
 
