--- a/projects/IHM/app/programmeMenu/programmeTab/programmeTab.html
+++ b/projects/IHM/app/programmeMenu/programmeTab/programmeTab.html
@@ -2,7 +2,8 @@
 
 <div ng-controller="programmeTabCtrl">
   <p>
-    Rentrez, dans chaque case, le nombre d'heure hebdomadaire correspondant
+    Sur cette page, définissez quels enseignements sont associés à quels niveaux et en quelles quantités.
+    <br/><br/>Exemple : 3ème, Français 3h, Maths 3h, EPS 2h...
   </p>
 
   <table class="framedTable">
