--- a/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
+++ b/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
@@ -1,7 +1,8 @@
 <h3>Matières</h3>
 
 <p>
-  Rajoutez des matières (ex: Tp de Physique, type de salle : TP-Physique)
+  Définissez les matières enseignées dans votre établissement. Chacune d'entre elles est associé à au moins un type de salle dans lequel le cours peut avoir lieu.
+  <br/><br/>Exemple : TP de Physique, type de salle : TP-Physique
 </p>
 
 <div ng-controller="subjectsTabCtrl">
