--- a/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
@@ -1,8 +1,8 @@
-<h3>Type de salle</h3>
+<h3>Types de salles</h3>
 <div ng-controller="roomTypeTabCtrl">
   <!--TODO:LANG-->
   <p>
-  Ajoutez/ supprimez des types de salle
+  Ajoutez/supprimez des types de salles. Un type de salles correspond à un ensemble de salles qui peuvent servir à enseigner les mêmes cours. <br/><br/>Par exemple : Amphithéâtre, Salle de TD, Salle de TP Chimie, Salle de Musique.
   </p>
 
   <table id="subjectTable" class="framedTable">
