--- a/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
+++ b/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
@@ -3,10 +3,11 @@
   <!--<div class="tabcontent" onload="genereTableau()">-->
   <div class="tabcontent" expanded="false">
 
-    <h3>Enseignants</h3>
+    <h3>Professeurs</h3>
 
     <p>
-      Rentrez des professeurs (ex: John Smith, Matières : Mathématiques - Physique - Chimie, Commentaire : "Doyen du collège")
+      Définissez pour chaque enseignant la ou les matières enseignées, les groupes à qui il peut enseigner, ses disponibilités et éventuellement un commentaire.
+      <br/><br/>Exemple : John Smith, Matières : Mathématiques - Physique - Chimie, Groupes : {3A, 4E}, Disponibilités : tout sauf mercredi, Commentaire : "Doyen du collège")
     </p>
 
     <table id="teacherTab" class="framedTable">
