--- a/projects/IHM/app/teacherMenu/teacherMenu.html
+++ b/projects/IHM/app/teacherMenu/teacherMenu.html
@@ -2,7 +2,7 @@
 <section ng-controller="teacherMenuCtrl">
 
   <div class="tab" expanded="false">
-    <button id='tchEnseignants' class="tablinks" onclick="openTab('teacherMenu/teacherTab/teacherTab.html', 'tchEnseignants')">Enseignant</button>
+    <button id='tchEnseignants' class="tablinks" onclick="openTab('teacherMenu/teacherTab/teacherTab.html', 'tchEnseignants')">Professeurs</button>
   </div>
 
   <div ng-include="page">
