http post of data and configs

--- a/projects/IHM/app/indexClient.html
+++ b/projects/IHM/app/indexClient.html
@@ -49,6 +49,7 @@
       <script src="anchoredParts/body.js"></script>
 
       <script src="services/dataFactory/dataFactory.js"></script>
+      <script src="services/serverCalls/serverCalls.js"></script>
 
       <script src="homeMenu/homeMenu.js"></script>
 
