fix graphic bug

--- a/projects/IHM/app/programmeMenu/programmeMenu.html
+++ b/projects/IHM/app/programmeMenu/programmeMenu.html
@@ -14,7 +14,7 @@
     </button>
   </div>
 
-  <div class="tabcontent" ng-include="page" expanded="false"></div>
+  <div ng-include="page"></div>
 </div>
 
 <script src="programmeMenu/gradeClassesTab/gradeClassesTab.js"></script>
