--- a/projects/IHM/app/schoolInformationMenu/scheduleTab/scheduleTab.html
+++ b/projects/IHM/app/schoolInformationMenu/scheduleTab/scheduleTab.html
@@ -1,32 +1,34 @@
-<h3>Jours et horaires</h3>
+<div class="tabcontent" expanded="false">
+	<h3>Jours et horaires</h3>
 
-<div ng-controller="scheduleTabCtrl">
-  <p>
-    Rentrez les horaires de cours de l'établissement (ex: 8h05 - 9h00 ; 9h05 - 10h00...)
-  </p>
-  <table class="framedTable">
-    <tr ng-repeat="day in scheduleArray">
-      <td>
-        <md-button class="md-icon-button" aria-label="supprimer les horaires de ce jour" ng-click="removeAllDayHourSlot($index)">
-          <md-icon>delete</md-icon>
-        </md-button>
-      </td>
-      <th scope="row">
-        {{day.dayName}}
-      </th>
-      <td ng-repeat="hourSlot in day.hours">
-        <input id={{"f"+$parent.$index+""+$index}} type="text" ng-model="hourSlot.start" maxlength="5" size="5" ng-keypress="pressKeyInput($parent.$index, $event, $index)" ng-keyup="releaseKeyInput($parent.$index, $event, $index)"></input>
-        <br>
-        <input id={{"s"+$parent.$index+""+$index}} type="text" ng-model="hourSlot.end" maxlength="5" size="5" ng-keypress="pressKeyInput($parent.$index, $event, $index)" ng-keyup="releaseKeyInput($parent.$index, $event, $index)"></input>
-        <!--{{hourSlot.start}} - {{hourSlot.end}}-->
-      </td>
-      <td>
-        <md-button class="md-icon-button" aria-label="Use Android" ng-click="addHourSlot($index)">
-          <md-icon>add</md-icon>
-        </md-button>
-      </td>
-    </tr>
-  </table>
+	<div ng-controller="scheduleTabCtrl">
+	  <p>
+		Rentrez les horaires de cours de l'établissement (ex: 8h05 - 9h00 ; 9h05 - 10h00...)
+	  </p>
+	  <table class="framedTable">
+		<tr ng-repeat="day in scheduleArray">
+		  <td>
+			<md-button class="md-icon-button" aria-label="supprimer les horaires de ce jour" ng-click="removeAllDayHourSlot($index)">
+			  <md-icon>delete</md-icon>
+			</md-button>
+		  </td>
+		  <th scope="row">
+			{{day.dayName}}
+		  </th>
+		  <td ng-repeat="hourSlot in day.hours">
+			<input id={{"f"+$parent.$index+""+$index}} type="text" ng-model="hourSlot.start" maxlength="5" size="5" ng-keypress="pressKeyInput($parent.$index, $event, $index)" ng-keyup="releaseKeyInput($parent.$index, $event, $index)"></input>
+			<br>
+			<input id={{"s"+$parent.$index+""+$index}} type="text" ng-model="hourSlot.end" maxlength="5" size="5" ng-keypress="pressKeyInput($parent.$index, $event, $index)" ng-keyup="releaseKeyInput($parent.$index, $event, $index)"></input>
+			<!--{{hourSlot.start}} - {{hourSlot.end}}-->
+		  </td>
+		  <td>
+			<md-button class="md-icon-button" aria-label="Use Android" ng-click="addHourSlot($index)">
+			  <md-icon>add</md-icon>
+			</md-button>
+		  </td>
+		</tr>
+	  </table>
 
-  <button ng-click="copyFirstLineHourSlot()">Copier les horaires du lundi</button>
+	  <button ng-click="copyFirstLineHourSlot()">Copier les horaires du lundi</button>
+	</div>
 </div>
