--- a/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
@@ -1,77 +1,80 @@
-<section ng-controller="roomTabCtrl">
+<div class="tabcontent" expanded="false">
+
+	<section ng-controller="roomTabCtrl">
 
 
-  <h3>Salle</h3>
-  <p>
-    Rentrez des salles (ex: C121, type: TP-Physique, capacité : 25)
-  </p>
-  <table class="framedTable">
-    <tr>
-      <th>Nom</th>
-      <th>Type de salle</th>
-      <th>Capacité</th>
-    </tr>
+	  <h3>Salle</h3>
+	  <p>
+		Rentrez des salles (ex: C121, type: TP-Physique, capacité : 25)
+	  </p>
+	  <table class="framedTable">
+		<tr>
+		  <th>Nom</th>
+		  <th>Type de salle</th>
+		  <th>Capacité</th>
+		</tr>
 
-    <tr>
-      <td>
-        <md-inputcontainer>
-          <input class="textInput" type="text" id="roomNameInput" ng-model="roomNameInputValue" ng-keypress="keyPress($event.keyCode)"
-                 cols="25" rows="1" placeholder="Entrer le nom de la salle"></input>
-        </md-inputcontainer>
-      </td>
-      <td class="coursName">
-        <select class="coursName" chosen multiple display-selected-options="false" no-results-text="'Pas de type de salle trouvé'"
-                placeholder-text-multiple="'Pas de type de salle selectionné pour le moment'"
-                ng-options="roomType for roomType in roomTypesArray" ng-model="roomTypesSelected" ng-keypress="keyPress($event.keyCode)">
-        </select>
-      </td>
-      <td>
-        <input type="number" min="1" max="300" ng-model="roomCapacity" ng-keypress="keyPress($event.keyCode)"></input>
-      </td>
-      <td>
-        <md-button class="md-icon-button" aria-label="Use Android" ng-click="addRoom()">
-          <md-icon>add</md-icon>
-        </md-button>
-      </td>
-    </tr>
+		<tr>
+		  <td>
+			<md-inputcontainer>
+			  <input class="textInput" type="text" id="roomNameInput" ng-model="roomNameInputValue" ng-keypress="keyPress($event.keyCode)"
+					 cols="25" rows="1" placeholder="Entrer le nom de la salle"></input>
+			</md-inputcontainer>
+		  </td>
+		  <td class="coursName">
+			<select class="coursName" chosen multiple display-selected-options="false" no-results-text="'Pas de type de salle trouvé'"
+					placeholder-text-multiple="'Pas de type de salle selectionné pour le moment'"
+					ng-options="roomType for roomType in roomTypesArray" ng-model="roomTypesSelected" ng-keypress="keyPress($event.keyCode)">
+			</select>
+		  </td>
+		  <td>
+			<input type="number" min="1" max="300" ng-model="roomCapacity" ng-keypress="keyPress($event.keyCode)"></input>
+		  </td>
+		  <td>
+			<md-button class="md-icon-button" aria-label="Use Android" ng-click="addRoom()">
+			  <md-icon>add</md-icon>
+			</md-button>
+		  </td>
+		</tr>
 
-    <tr ng-repeat="room in roomsArray">
-      <td>
-        {{room.name}}
-      </td>
-      <td>
-        <ul>
-          <li class="dotlessList" ng-repeat="roomType in room.roomTypes">
-            {{roomType}}
-          </li>
-        </ul>
-      </td>
-      <td>
-        <input type="number" min="1" max="300" ng-model="room.roomCapacity"></input>
-      </td>
-      <td>
-        <md-button class="md-icon-button" aria-label="supprimmer ce type de salle" ng-click="removeRoom($index)">
-          <md-icon>delete</md-icon>
-        </md-button>
-      </td>
-    </tr>
+		<tr ng-repeat="room in roomsArray">
+		  <td>
+			{{room.name}}
+		  </td>
+		  <td>
+			<ul>
+			  <li class="dotlessList" ng-repeat="roomType in room.roomTypes">
+				{{roomType}}
+			  </li>
+			</ul>
+		  </td>
+		  <td>
+			<input type="number" min="1" max="300" ng-model="room.roomCapacity"></input>
+		  </td>
+		  <td>
+			<md-button class="md-icon-button" aria-label="supprimmer ce type de salle" ng-click="removeRoom($index)">
+			  <md-icon>delete</md-icon>
+			</md-button>
+		  </td>
+		</tr>
 
-    <!--<tr ng-repeat="r in roomsArray">
-      <td>
-        <input type="text" name="roomName" ng-model="r.roomName"/>
-      </td>
-      <td class="coursName">
-        <select chosen multiple display-selected-options="false" class="coursName" no-results-text="'Pas de type de salle trouvé pour:'"
-                placeholder-text-multiple="'Pas de type de salle selectionné pour le moment'" ng-options="rt.roomType for rt in roomTypesArray"
-                ng-model="r.roomType">
-          <option value=""></option>
-        </select>
-      </td>
-      <td>
-        <md-button class="md-icon-button" aria-label="supprimmer cette salle" ng-click="removeRoom($index)">
-          <md-icon>delete</md-icon>
-        </md-button>
-      </td>
-    </tr> !-->
-  </table>
-</section>
+		<!--<tr ng-repeat="r in roomsArray">
+		  <td>
+			<input type="text" name="roomName" ng-model="r.roomName"/>
+		  </td>
+		  <td class="coursName">
+			<select chosen multiple display-selected-options="false" class="coursName" no-results-text="'Pas de type de salle trouvé pour:'"
+					placeholder-text-multiple="'Pas de type de salle selectionné pour le moment'" ng-options="rt.roomType for rt in roomTypesArray"
+					ng-model="r.roomType">
+			  <option value=""></option>
+			</select>
+		  </td>
+		  <td>
+			<md-button class="md-icon-button" aria-label="supprimmer cette salle" ng-click="removeRoom($index)">
+			  <md-icon>delete</md-icon>
+			</md-button>
+		  </td>
+		</tr> !-->
+	  </table>
+	</section>
+</div>
