Fix capacity in roomTab

--- a/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
@@ -50,7 +50,7 @@
 			</ul>
 		  </td>
 		  <td>
-			<input type="number" min="1" max="300" ng-model="room.roomCapacity"></input>
+			<input type="number" min="0" max="300" ng-model="room.capacity"></input>
 		  </td>
 		  <td>
 			<md-button class="md-icon-button" aria-label="supprimmer ce type de salle" ng-click="removeRoom($index)">
