--- a/projects/IHM/app/anchoredParts/body.html
+++ b/projects/IHM/app/anchoredParts/body.html
@@ -49,12 +49,12 @@
 		
 			<div>
 				<label for="etablissement" style="text-align: right">Etablissement :</label>
-				<input id="etablissement" name="etablissement" type="text" ng-model="etablissement"/>
+				<input id="etablissement" name="etablissement" type="text" ng-model="etablissement" placeholder="Etablissement"/>
 			</div>
 		
 			<div>
 				<label for="mdp" style="text-align: right">Mot de passe :</label>
-				<input id="mdp" name="mdp" type="password" ng-model="mdp"/>
+				<input id="mdp" name="mdp" type="password" ng-model="mdp" placeholder="Mot de passe"/>
 			</div>
 			
 			<button ng-click="login()">Login</button>
