add description on roomTypeTab

--- a/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
@@ -4,7 +4,8 @@
 	<div ng-controller="roomTypeTabCtrl">
 	  <!--TODO:LANG-->
 	  <p>
-	  Ajoutez/ supprimez des types de salle
+		  Ajoutez/supprimez des types de salles, qui correspondent à un ensemble de salles dans lesquelles les mêmes cours peuvent avoir lieu. La capacité de la salle n'est pas à prendre en compte.
+		  <br/><br/> Exemple : amphithéâtres, salle de travaux dirigés, salle avec vidéoprojecteur, salle de TP Chimie...
 	  </p>
 
 	  <table id="subjectTable" class="framedTable">
