--- a/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
@@ -25,7 +25,7 @@
 		</tr>
 		<tr ng-repeat="roomType in roomTypesArray track by $index">
 		  <td>
-			{{roomType}}
+			  <input type="text" readonly ng-model="roomType" />
 		  </td>
 		  <td>
 			<md-button class="md-icon-button" aria-label="supprimmer ce type de salle"
