--- a/projects/IHM/app/programmeMenu/gradeClassesTab/gradeClassesTab.html
+++ b/projects/IHM/app/programmeMenu/gradeClassesTab/gradeClassesTab.html
@@ -10,16 +10,21 @@
 	<div ng-controller="gradeClassesTabCtrl">
 	  {{JSON.stringify(grades)}}
 
-	  <table class="framedTable">
+	  <table id="gradeClassTab" class="framedTable">
 		<tr>
 		  <th>Niveau</th>
 		  <th>Classe</th>
 		  <th>Effectif</th>
+			<th>
+				<md-button class="md-icon-button" ng-click="toggleModification()">
+					<i class="material-icons">create</i>
+				</md-button>
+			</th>
 		</tr>
 
 		<tr ng-repeat-start="(indexGrade , grade) in grades">
 		  <td>
-			  <input type="text" readonly ng-model="grade.name" /></td>
+			  <input class="readOnlyToggable" type="text" readonly ng-model="grade.name" /></td>
 		  <td></td>
 		  <td></td>
 		  <td>
@@ -33,11 +38,11 @@
 		  <td></td>
 		  <td>
 
-			  <input type="text" readonly ng-model="class.name" />
+			  <input class="readOnlyToggable" type="text" readonly ng-model="class.name" />
 		  </td>
 		  <td>
 
-			  <input type="text" readonly ng-model="class.studentNumber" />
+			  <input class="readOnlyToggable" type="text" readonly ng-model="class.studentNumber" />
 		  </td>
 		  <td>
 			<md-button class="md-icon-button" ng-click="deleteClass(indexGrade,indexClass)">
