Added Attribution to menus
Empty page for now

--- a/projects/IHM/app/indexClient.html
+++ b/projects/IHM/app/indexClient.html
@@ -63,8 +63,10 @@
       <script src="programmeMenu/subjectsTab/subjectsTab.js"></script>
       <script src="programmeMenu/programmeTab/programmeTab.js"></script>
 
+	  <script src="teacherMenu/teacherMenu.js"></script>
       <script src="teacherMenu/teacherTab/teacherTab.js"></script>
-      <script src="teacherMenu/teacherMenu.js"></script>
+	  <script src="teacherMenu/attributionTab/attributionTab.js"></script>
+      
 
       <script src="components/version/version.js"></script>
       <script src="components/version/version-directive.js"></script>
