fin affichage modif

--- a/projects/IHM/app/programmeMenu/gradeClassesTab/gradeClassesTab.html
+++ b/projects/IHM/app/programmeMenu/gradeClassesTab/gradeClassesTab.html
@@ -42,7 +42,7 @@
 		  </td>
 		  <td>
 
-			  <input class="readOnlyToggable" type="text" readonly ng-model="class.studentNumber" />
+			  <input class="readOnlyToggable number" type="text" readonly ng-model="class.studentNumber" />
 		  </td>
 		  <td>
 			<md-button class="md-icon-button" ng-click="deleteClass(indexGrade,indexClass)">
