--- a/projects/IHM/app/programmeMenu/programmeMenu.html
+++ b/projects/IHM/app/programmeMenu/programmeMenu.html
@@ -7,7 +7,7 @@
     <button ng-disabled="roomType.length == 0" id="programmeSubjects" class="tablinks" ng-click="openTab('programmeMenu/subjectsTab/subjectsTab.html', 'programmeSubjects')">
       Matières
     </button>
-    <button ng-disabled="years.length == 0 || subject.length == 0" id="programmeProgramme" class="tablinks"
+    <button ng-disabled="years.length == 0 || subjects.length == 0" id="programmeProgramme" class="tablinks"
             ng-click="openTab('programmeMenu/programmeTab/programmeTab.html', 'programmeProgramme')">Programmes scolaires
     </button>
   </div>
