--- a/projects/IHM/app/teacherMenu/teacherMenu.html
+++ b/projects/IHM/app/teacherMenu/teacherMenu.html
@@ -3,7 +3,7 @@
 
   <div class="tab" expanded="false">
     <button id='tchEnseignants' class="tablinks" ng-click="openTab('teacherMenu/teacherTab/teacherTab.html', 'tchEnseignants')">Professeurs</button>
-	<button ng-disabled="teachers.length == 0 || subjects.length == 0 || classes.length == 0 || years.length == 0" 
+	<button ng-disabled="teachers.length == 0 || subjects.length == 0 || classes.length == 0" 
 		id='tchAttribution' class="tablinks" ng-click="openTab('teacherMenu/attributionTab/attributionTab.html', 'tchAttribution')">
 		Attribution des professeurs
 	</button>
