--- a/projects/IHM/app/homeMenu/homeMenu.html
+++ b/projects/IHM/app/homeMenu/homeMenu.html
@@ -1,8 +1,8 @@
 <div ng-controller="homeMenuCtrl">
 	<div style="display:none" ng-model="page"></div>
 	<div class="tab" expanded="false">
-		<button disabled id="homeSave" class="tablinks" ng-click="save()">Exporter la configuration</button>
-		<button disabled id="homeLoad" class="tablinks" ng-click="load()">Importer une configuration</button>
+		<button id="homeSave" class="tablinks" ng-click="save()">Exporter la configuration</button>
+		<button id="homeLoad" class="tablinks" ng-click="load()">Importer une configuration</button>
 		<button disabled id="homeGen" class="tablinks" ng-click="generate()">Générer l'emploi du temps</button>
 	</div>
 
