--- a/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
+++ b/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
@@ -37,7 +37,7 @@
           </select>
         </td>
         <td>
-          <md-button ng-click="openOverlay()">DISP</md-button>
+          <button ng-click="openOverlay()">DISP</button>
         </td>
         <td>
           <md-button class="md-icon-button" ng-click="addTeacher()">
