--- a/projects/IHM/app/anchoredParts/body.html
+++ b/projects/IHM/app/anchoredParts/body.html
@@ -86,6 +86,10 @@
 
         </fieldset>
     </div>
+
+    <div id="overlayWait" class="bodyOverlay" ng-controller="homeMenuCtrl">
+        <md-progress-circular md-mode="indeterminate" md-diameter="150px" style="margin-left: 40%; margin-top: 100px"></md-progress-circular>
+    </div>
 		
     </div>
 <!--
