--- a/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
+++ b/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
@@ -56,7 +56,7 @@
         <td class="coursName">
           <ul>
             <li class="dotlessList" ng-repeat="subject in teacher.subject">
-              {{subject.name}}
+              {{subject}}
             </li>
           </ul>
         </td>
