--- a/projects/IHM/app/teacherMenu/attributionTab/attributionTab.html
+++ b/projects/IHM/app/teacherMenu/attributionTab/attributionTab.html
@@ -8,22 +8,25 @@
       Description </p>
 
     <table id="attributionTable" class="framedTable">
-		<!-- Column Headers -->
-		<tr>
-		  <th></th>
-		  <th scope="col" ng-repeat="subject in subjectArray">
-			{{subject.name}}
-		  </th>
-		</tr>
-		<!-- Table Body -->
-		<tr ng-repeat="attribution in attributionArray">
-		  <th>{{attribution.class}}</th>
-		  <td ng-repeat="subject in attribution.subjects">
-			<select ng-options="(teacher.firstName + ' ' + teacher.lastName) for teacher in getAccessToTeacherArrayBySubject(subject.subjectName)" 
-				ng-model="currentTeacherSelected"></select>
-		  </td>
-		</tr>
-		
+      <!-- Column Headers -->
+      <tr>
+        <th></th>
+        <th scope="col" ng-repeat="subject in subjectArray">
+          {{subject.name}}
+        </th>
+      </tr>
+      <!-- Table Body -->
+      <tr ng-repeat="(indexAttribution, attribution) in attributionArray">
+        <th>{{attribution.class}}</th>
+        <td ng-repeat="(indexSubject, subject) in attribution.subjects">
+          <select
+              ng-options="(teacher.firstName + ' ' + teacher.lastName) for teacher in getAccessToTeacherArrayBySubject(subject.subjectName)"
+              ng-model="currentTeacherSelectedArray[indexAttribution][indexSubject]"
+              ng-change="changedValue(currentTeacherSelectedArray[indexAttribution][indexSubject], indexAttribution, indexSubject)">
+          </select>
+        </td>
+      </tr>
+
     </table>
 
   </div>
