--- a/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
+++ b/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
@@ -16,7 +16,7 @@
         <th>Nom</th>
         <th>Matières</th>
         <th>Indisponibilités</th>
-        <th>
+        <th class="noDisplay">
           <md-button class="md-icon-button" ng-click="toggleModification()">
             <i class="material-icons">create</i>
           </md-button>
