--- a/projects/IHM/app/programmeMenu/gradeClassesTab/gradeClassesTab.html
+++ b/projects/IHM/app/programmeMenu/gradeClassesTab/gradeClassesTab.html
@@ -15,7 +15,7 @@
 		  <th>Niveau</th>
 		  <th>Classe</th>
 		  <th>Effectif</th>
-			<th>
+			<th class="noDisplay">
 				<md-button class="md-icon-button" ng-click="toggleModification()">
 					<i class="material-icons">create</i>
 				</md-button>
@@ -37,11 +37,11 @@
 		<tr ng-repeat="(indexClass , class) in grade.classes">
 		  <td></td>
 		  <td>
-			  <input class="readOnlyToggable" type="text" readonly ng-model="class.name" />
+			  <input class="readOnlyToggable" type="text" readonly ng-model="class.name"/>
 		  </td>
 		  <td>
 
-			  <input class="readOnlyToggable number" type="text" readonly ng-model="class.studentNumber" />
+			  <input class="readOnlyToggable number" type="text" readonly ng-model="class.studentNumber"/>
 		  </td>
 		  <td>
 			<md-button class="md-icon-button" ng-click="deleteClass(indexGrade,indexClass)">
