--- a/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
+++ b/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
@@ -16,7 +16,7 @@
 		<th>
 		  Type de salle
 		</th>
-		  <th>
+		  <th class="noDisplay">
 			  <md-button class="md-icon-button" ng-click="toggleModification()">
 				  <i class="material-icons">create</i>
 			  </md-button>
